[tool.poetry]
name = "assistants-api-easy"
version = "0.1.0"
description = ""
authors = ["Charles Calapini <charles@calapini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
openai = "^1.3.6"
requests = "^2.31.0"
pandas = "^2.1.3"
seaborn = "^0.13.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
